# check404

./: .gitignore  Makefile  check404.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
check404/: behaviors.py  check.py  checker.py  grader.py  parser.py  tree.py  types.py
src/check404/: __init__.py  behaviors.py  check.py  parser.py  testing.py  types.py
tests/: __init__.py  check404.py  conftest.py  test.yml  test_checks.py  test_function.py  test_iostream.py  teste.c
tests/c_src/: iostream_double.c  iostream_double_string.c  iostream_simple.c  iostream_simple_inc.c
