[metadata]
name = check404
description = Custom acitvity checker for correctness
author = Rodrigo Nicola
license = MIT
license_file = LICENSE 
platforms = unix, linux, osx, cygwin
classifiers = 
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3 :: 3.7
  Programming Language :: Python :: 3 :: 3.8
  Programming Language :: Python :: 3 :: 3.9
  Programming Language :: Python :: 3 :: 3.10

[options]
packages = check404
python_requires = >=3.7
package_dir = =src
zip_save = no  
install_requires = 
  patool>=1.10


[options.entry_points]
console_scripts =
  check404 = check404:main

[options.extras_require]
testing =
  pytest>=6.0
  pytest-cov>=2.0
  mypy>=0.910
  flake8>=3.9
  tox>=3.24
  pyyaml>=6.0

[options.package_data]
check404 = py.typed

[flake8]
max-line-length = 79

